updated decomposition options
